# SaaS

./: .gitignore  GEMINI.md  README.md  package.json  test.sh
.github/workflows/: ci.yml
apps/backend/: .env.example  Cargo.toml
apps/backend/.sqlx/: query-2adc9fa303079a3e9c28bbf0565c1ac60eea3a5c37e34fc6a0cb6e151c325382.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-f3f58600e971f1be6cbe206bba24f77769f54c6230e28f5b3dc719b869d9cb3f.json
apps/backend/migrations/: 20240101000000_create_users_table.sql
apps/backend/src/: config.rs  errors.rs  lib.rs  main.rs  models.rs  redis.rs  routes.rs  state.rs
apps/backend/src/auth/: jwt.rs  mod.rs  password.rs
apps/backend/src/db/: mod.rs
apps/backend/src/models/: mod.rs  user.rs
apps/backend/src/routes/: auth.rs
apps/backend/src/utils/: token.rs
apps/backend/tests/: auth.rs
apps/frontend/: next.config.mjs
apps/frontend/src/app/: layout.tsx  page.tsx
apps/frontend/src/app/(dashboard)/: layout.tsx  page.tsx
docs/: architecture.md  setup-guide.md
infrastructure/docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
infrastructure/terraform/: main.tf
